Fixing Nav on Mobile

--- a/docs/assets/css/custom-styles.css
+++ b/docs/assets/css/custom-styles.css
@@ -34,6 +34,7 @@ nav ul li {
     text-align: center;
     text-decoration: none;
     margin: 5px;
+    display: inline-block;
 }
 
 nav ul{
@@ -46,6 +47,7 @@ nav a {
     font-weight: bold;
     padding: 1em;
     margin-left: 5px;
+    display: block;
 }
 
 nav a:hover {
